Update mobile styles for Navbar menu items.- Add flex column layout and adjust spacing.- Set Navbar position to fixed at the top

--- a/src/app/components/shared/Navbar/Navbar.module.css
+++ b/src/app/components/shared/Navbar/Navbar.module.css
@@ -8,13 +8,6 @@
   border: 3px solid green;
 }
 
-.Navbar__list li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
 .Navbar__list {
   display: flex;
   flex-flow: row nowrap;
@@ -35,8 +28,6 @@
 
 .Navbar__list li {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   text-align: center;
 }
 
@@ -47,4 +38,21 @@
 .Navbar__list svg{
   width: var(--width-icon-navbar);
   height: var(--height-icon-navbar);
+}
+
+@media (max-width: 640px) {
+  .Navbar {
+    position: fixed; /* Mantener la posición fija */
+    top: 0;
+  }
+
+  .Navbar__list{
+    display: flex;
+    flex-flow: column nowrap;
+    list-style: none;
+    column-gap: 2.5rem;
+    margin: 0 auto;
+    padding: 0.35rem;
+    justify-content: left;
+  }
 }
